# MPI

./: CMakeLists.txt  README.md
MPIAllGather/: CMakeLists.txt
MPIAllGather/src/: CMakeLists.txt  MPIAllGather.cpp
MPIBasicComm/: CMakeLists.txt
MPIBasicComm/src/: CMakeLists.txt  MPIBasicComm.cpp
MPIDistributedSum/: CMakeLists.txt
MPIDistributedSum/src/: CMakeLists.txt
MPIGather/: CMakeLists.txt
MPIGather/src/: MPIGather.cpp
MPIGroups/: CMakeLists.txt
MPIGroups/src/: CMakeLists.txt  MPIGroups.cpp
MPIHelloWorld/: CMakeLists.txt
MPIHelloWorld/src/: CMakeLists.txt  MPIHelloWorld.cpp
MPIMatMult/: CMakeLists.txt
MPIMatMult/src/: CMakeLists.txt  MPIMatMult.cpp
MPIReduce/: CMakeLists.txt
MPIReduce/src/: MPIReduce.cpp
MPIScatter/: CMakeLists.txt
MPIScatter/src/: MPIScatter.cpp
